syntax = "proto3";

package discovery;

service DiscoveryService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc GetNodes(GetNodesRequest) returns (GetNodesResponse);
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
  string node_id = 2;
}

message NodeInfo {
  string id = 1;
  string address = 2;
  int32 port = 3;
}

message GetNodesRequest {}

message GetNodesResponse {
  repeated NodeInfo nodes = 1;
}

message RegisterNodeRequest {
  NodeInfo node = 1;
}

message RegisterNodeResponse {
  bool success = 1;
  repeated NodeInfo cluster_nodes = 2;
}
